# xpmt

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dashboard_commands.rs  member_commands.rs  mod.rs  project_commands.rs  setup_commands.rs  share_commands.rs  task_commands.rs  user_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs  project.rs  task.rs  user.rs  workspace.rs
src/components/: Header.tsx  JoinViaLink.tsx  ProjectWizard.tsx  ShareLinkModal.tsx  Sidebar.tsx  StatCard.tsx  UpdateModal.tsx
src/hooks/: useAppState.ts  useInvoke.ts  useProjects.ts  useTasks.ts  useTheme.ts  useUsers.ts
src/pages/: Dashboard.tsx  Onboarding.tsx  Placeholder.tsx  Projects.tsx
src/types/: constants.ts  index.ts
