[package]
name = "xpmt"
version = "1.0.0"
description = "XPMT - Project Management Desktop App"
authors = ["X-Cognivis"]
edition = "2021"

[lib]
name = "xpmt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio",
  "chrono",
  "uuid"
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# IDs & time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"
rand = "0.8"
